# mr3_mini_description

./: LICENSE  README.md  package.xml  setup.cfg  setup.py
launch/: view_robot.launch.py
meshes/: base.stl  flange.stl  horizontal_linkage.stl  joint_3_linkage.stl  link_3.stl  link_4.stl  logo.stl  motor_1.stl  motor_2.stl  motor_3.stl  motor_3_linkage.stl  motor_4.stl  panel.stl  tool_base.stl  triangular_linkage.stl  vertical_linkage.stl  x_axis.stl  y_axis.stl  z_axis.stl
rviz/: mr3_mini_view.rviz
urdf/: mr3_mini.urdf
