<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mr3_mini_description</name>
  <version>0.0.1</version>
  <description>URDF and meshes for the MR-3 Mini palletizing robot</description>
  <maintainer email="matheus.vlino@gmail.com">Matheus Lino</maintainer>
  <license>BSD-3-Clause</license>

  <exec_depend>urdf</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
